--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>EVACOM</title>
     <link href="default.css" rel="stylesheet" type="text/css">
     <link href="rsrc/socicon/styles.css" rel="stylesheet">
-    <link href="/rsrc/featherlight-1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet"/>
+    <link href="rsrc/featherlight-1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet"/>
     <script src="//code.jquery.com/jquery-latest.js"></script>
-    <script src="/rsrc/featherlight-1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="rsrc/featherlight-1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $(".traklist").show(); 
