--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>EVACOM</title>
+    <meta name=viewport content='width=450'>
     <link href="default.css" rel="stylesheet" type="text/css">
     <link href="rsrc/fonts/socicon/styles.css" rel="stylesheet">
     <link href="rsrc/fonts/glyph/styles.css" rel="stylesheet">
@@ -61,6 +62,7 @@
         <source src="rsrc/audio/linnloop441k.ogg">
     </audio>
     <a id="killsound"  onclick="document.getElementById('background_audio').muted = true;">[MUTE SOUND]</a>
+    
     <div class="content">
         <div id="HeadNav">
             
@@ -77,21 +79,21 @@
                 <a href="https://evacom.bandcamp.com/" target="_blank" class="socialLinks">
                     <span class="icon-bandcamp-1 socialIcons"></span><span>BC</span>
                 </a>
-                <div class ="vr"></div>
+                <!--<div class ="vr"></div>-->
                 <a href="https://soundcloud.com/northernplastix" target="_blank" class="socialLinks">
                     <span class="socicon-soundcloud socialIcons"></span><span>SC</span>
                 </a>
-                <div class ="vr"></div>
+                <!--<div class ="vr"></div>-->
                 <a href="https://twitter.com/EVAC0M" target="_blank" class="socialLinks">
                     <span class="socicon-twitter socialIcons"></span><span>TW</span>
                     </a>
-                <div class ="vr"></div>
+                <!--<div class ="vr"></div>-->
                 <a href="https://www.facebook.com/evac0m/" target="_blank" class="socialLinks">
                     <span class="icon-facebook-official socialIcons"></span><span>FB</span>
                 </a>
             </div>
         </div>
-        <div class="hr"></div>
+        <div class="hr" style="margin-top: 7em;"></div>
         <div id="Discography">
             <h2>selected discography</h2>
             <div class="release">
@@ -185,7 +187,9 @@
                     <noscript>[Turn on JavaScript to see the email address]</noscript>
                 </span><br>
                 </div>
-            </div>   
+            </div>
+        <div class="hr" style="margin-bottom:15px;"></div>
+        <div id="cs80"><img src="rsrc/img/cs80.svg" style="visibility:hidden; width:450px; margin:0; display:block;"></div>
     </div>
 </body>
 </html>
