i have no idea how viewport tag works

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>EVACOM</title>
-    <meta name=viewport content='width=450'>
+    <meta name=viewport content='width=device-width,initial-scale=1,user-scalable=yes'>
     <link href="default.css" rel="stylesheet" type="text/css">
     <link href="rsrc/fonts/socicon/styles.css" rel="stylesheet">
     <link href="rsrc/fonts/glyph/styles.css" rel="stylesheet">
