--- a/index.html
+++ b/index.html
@@ -136,14 +136,8 @@
             <button class="reveal">show tracklist</button>
         
             <div class="traklist" style="height:490px">
-                <iframe id="bandcampPlaylist" style=
-                                                    "border: 0;
-                                                     position: relative;
-                                                     height: 510px;
-                                                     width: 475px;
-                                                     left: -10px;
-                                                     top: -1px;"
-                src="https://bandcamp.com/EmbeddedPlayer/album=3884733877/size=large/bgcol=000000/linkcol=F50641/artwork=none/transparent=true/" seamless><a href="http://evacom.bandcamp.com/album/fragments-of-a-hologram-rose">Fragments of a Hologram Rose by EVACOM</a></iframe>
+                <iframe id="bandcampPlaylist" style="border: 0; position: relative; height: 510px; width: 475px; left: -10px; top: -1px;"
+                src="https://bandcamp.com/EmbeddedPlayer/album=3884733877/size=large/bgcol=000000/linkcol=F50641/artwork=none/transparent=true/" onclick="musicloop.stop()" seamless><a href="http://evacom.bandcamp.com/album/fragments-of-a-hologram-rose">Fragments of a Hologram Rose by EVACOM</a></iframe>
             </div>
         </div>    
             <div class="release">
@@ -166,13 +160,8 @@
             <button class="reveal">show tracklist</button>
         
             <div class="traklist" style="height:220px;">
-                <iframe id="bandcampPlaylist" style="border: 0;
-                                                     position: relative;
-                                                     height: 241px;
-                                                     width: 475px;
-                                                     left: -10px;
-                                                     top: -1px;"
-                src="https://bandcamp.com/EmbeddedPlayer/album=2621067954/size=large/bgcol=000000/linkcol=F50641/artwork=none/transparent=true/" seamless><a href="http://evacom.bandcamp.com/album/trouble-shooter">Trouble Shooter by EVACOM</a></iframe>
+                <iframe id="bandcampPlaylist" style="border: 0; position: relative; height: 241px; width: 475px; left: -10px; top: -1px;"
+                src="https://bandcamp.com/EmbeddedPlayer/album=2621067954/size=large/bgcol=000000/linkcol=F50641/artwork=none/transparent=true/" onclick="musicloop.stop()" seamless><a href="http://evacom.bandcamp.com/album/trouble-shooter">Trouble Shooter by EVACOM</a></iframe>
             </div>
         </div>
         </div>
