--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         
             <div class = "mailListing">
                 <div id="emailLeftColumn">
-                    <span class="mailDesc" style="letter-spacing: .19em;">general inquiry</span><span>:</span><br>
-                    <span class="mailDesc">w/r/t SCANLINE label:</span>
+                    <span class="mailDesc" style="letter-spacing: .19em;">general inquiry</span><span style="font-face:bold; float:right;">:</span><br>
+                    <span class="mailDesc">w/r/t SCANLINE label<span style="font-face:bold; float:right;">:</span></span>
                 </div>
                 <div id="emailRightColumn">
                 
