--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class = "mailListing">
                 <div id="emailLeftColumn">
                     <span class="mailDesc" style="letter-spacing: .19em;">general inquiry</span><span style="font-weight:bold; float:right; letter-spacing:0;">:</span><br>
-                    <span class="mailDesc">w/r/t SCANLINE label<span style="font-weight:bold; float:right; letter-spacing:0;">:</span></span>
+                    <span class="mailDesc">w/r/t SCANLINE label</span><span style="font-weight:bold; float:right; letter-spacing:0;">:</span>
                 </div>
                 <div id="emailRightColumn">
                 
