--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html>
 <head>
     <title>EVACOM</title>
-    <meta name=viewport content='width=device-width,initial-scale=0.9,user-scalable=yes'>
+    <meta name=viewport content='width=device-width,user-scalable=yes'>
+    <!--icons-->
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="ico/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="ico/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href=“ico/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href=“ico/favicon-16x16.png" sizes="16x16" />
+<meta name="application-name" content="EVACOM"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content=“ico/mstile-144x144.png" />
+<meta name="msapplication-square310x310logo" content=“ico/mstile-310x310.png" />
+    
     <link href="default.css" rel="stylesheet" type="text/css">
     <link href="rsrc/fonts/socicon/styles.css" rel="stylesheet">
     <link href="rsrc/fonts/glyph/styles.css" rel="stylesheet">
     <link href="rsrc/featherlight-1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet"/>
-    <script src="//code.jquery.com/jquery-latest.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="rsrc/howler/dist/howler.js"></script>
     <script src="rsrc/featherlight-1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
