--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="rsrc/fonts/socicon/styles.css" rel="stylesheet">
     <link href="rsrc/fonts/glyph/styles.css" rel="stylesheet">
     <link href="rsrc/featherlight-1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet"/>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="jq/jquery-3.1.1.js"></script>
     <script src="rsrc/howler/dist/howler.js"></script>
     <script src="rsrc/featherlight-1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
